[package]
name = "hackatum24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
rocksdb = { version = "0.22", features = ["serde"] }
bytes = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
base64 = "0.21"
